--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "animate.css": "~3.3.0",
     "angular": "~1.4.0",
     "firebase": "~2.2.9",
-    "angularfire": "~1.1.2"
+    "angularfire": "~1.1.2",
+    "mockfirebase": "~0.11.0",
+    "angular-local-storage": "~0.2.2"
   },
   "devDependencies": {
     "angular-mocks": "~1.4.0"
