--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "fb",
   "version": "0.0.1",
+  "license": "MIT",
+  "description": "angular services for Firebase",
   "dependencies": {},
   "scripts": {
     "test": "gulp test"
@@ -35,13 +37,14 @@
     "gulp-useref": "~1.2.0",
     "gulp-util": "~3.0.5",
     "http-proxy-middleware": "~0.0.5",
-    "jasmine-matchers": "^0.2.3",
+    "jasmine-expect": "^1.22.3",
     "jasmine-sinon": "^0.4.0",
     "jshint-stylish": "~2.0.0",
     "karma": "~0.12.36",
     "karma-angular-filesort": "~0.1.0",
     "karma-coverage": "^0.5.0",
     "karma-jasmine": "~0.3.5",
+    "karma-jasmine-matchers": "^0.1.3",
     "karma-ng-html2js-preprocessor": "~0.1.2",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "~0.2.0",
