--- a/package.json
+++ b/package.json
@@ -45,9 +45,11 @@
     "karma-coverage": "^0.5.0",
     "karma-jasmine": "~0.3.5",
     "karma-jasmine-matchers": "^0.1.3",
+    "karma-nested-reporter": "^0.1.3",
     "karma-ng-html2js-preprocessor": "~0.1.2",
     "karma-notify-reporter": "^0.1.1",
     "karma-phantomjs-launcher": "~0.2.0",
+    "karma-sinon": "^1.0.4",
     "karma-spec-reporter": "0.0.20",
     "karma-verbose-reporter": "0.0.3",
     "lodash": "~3.9.3",
