--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bpietravalle/fb.git"
+    "url": "https://github.com/bpietravalle/fireStarter.git"
   }
 }
