--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,9 @@
 {
-    "name": "fireStarter",
+    "name": "firebase-starter",
+    "authors": [{
+        "name": "Brian Pietravalle",
+        "email": "bpietravalle@gmail.com"
+    }],
     "version": "0.0.0",
     "license": "MIT",
     "description": "experimental wrapper for angularfire and geofire",
@@ -17,7 +21,7 @@
         "angular": "~1.4.4",
         "rsvp": "3.1.x"
     },
-    "files": ["dist/scripts"],
+    "main": ["dist/scripts/app.js"],
     "ignore": [
         "**/.*",
         "coverage",
@@ -28,6 +32,6 @@
     ],
     "repository": {
         "type": "git",
-        "url": "https://github.com/bpietravalle/fireStarter.git"
+        "url": "git://github.com/bpietravalle/fireStarter.git"
     }
 }
