--- a/bower.json
+++ b/bower.json
@@ -21,7 +21,7 @@
         "angular": "~1.4.4",
         "rsvp": "3.1.x"
     },
-    "main": ["src/app/fireStarter.factory.js"],
+    "main": "src/app/fireStarter.factory.js",
     "ignore": [
         "**/.*",
         "coverage",
