--- a/bower.json
+++ b/bower.json
@@ -1,37 +1,39 @@
 {
-    "name": "firebase-starter",
-    "authors": [{
-        "name": "Brian Pietravalle",
-        "email": "bpietravalle@gmail.com"
-    }],
-    "version": "0.1.0",
-    "license": "MIT",
-    "description": "experimental wrapper for angularfire and geofire",
-    "dependencies": {
-        "angular": "~1.4.4",
-        "angularfire": "~1.1.2",
-        "firebase": "~2.2.9",
-        "geofire": "~3.2.3"
-    },
-    "devDependencies": {
-        "mockfirebase": "~0.11.0",
-        "angular-mocks": "~1.4.0"
-    },
-    "resolutions": {
-        "angular": "~1.4.4",
-        "rsvp": "3.1.x"
-    },
-    "main": "src/app/fireStarter.factory.js",
-    "ignore": [
-        "**/.*",
-        "coverage",
-        "node_modules",
-        "bower_components",
-        "src/test",
-        "src/testutils"
-    ],
-    "repository": {
-        "type": "git",
-        "url": "git://github.com/bpietravalle/fireStarter.git"
+  "name": "firebase-starter",
+  "authors": [
+    {
+      "name": "Brian Pietravalle",
+      "email": "bpietravalle@gmail.com"
     }
+  ],
+  "version": "0.2.0",
+  "license": "MIT",
+  "description": "experimental wrapper for angularfire and geofire",
+  "dependencies": {
+    "angular": "~1.4.4",
+    "angularfire": "~1.1.2",
+    "firebase": "~2.2.9",
+    "geofire": "~3.2.3"
+  },
+  "devDependencies": {
+    "mockfirebase": "~0.11.0",
+    "angular-mocks": "~1.4.0"
+  },
+  "resolutions": {
+    "angular": "~1.4.4",
+    "rsvp": "3.1.x"
+  },
+  "main": "src/app/fireStarter.factory.js",
+  "ignore": [
+    "**/.*",
+    "coverage",
+    "node_modules",
+    "bower_components",
+    "src/test",
+    "src/testutils"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bpietravalle/fireStarter.git"
+  }
 }
