--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firebase-starter",
+  "name": "firebase.starter",
   "author": {
     "name": "Brian Pietravalle",
     "email": "bpietravalle@gmail.com"
