--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,8 @@
   "description": "experimental wrapper for angularfire and geofire",
   "dependencies": {
     "angular": "~1.4.4",
-    "angularfire": "~1.1.2",
-    "firebase": "~2.2.9",
+    "angularfire": "~1.1.3",
+    "firebase": "~2.3.2",
     "geofire": "~3.2.3"
   },
   "devDependencies": {
@@ -19,8 +19,7 @@
     "angular-mocks": "~1.4.0"
   },
   "resolutions": {
-    "angular": "~1.4.4",
-    "rsvp": "3.1.x"
+    "angular": "~1.4.4"
   },
   "main": "src/app/fireStarter.factory.js",
   "ignore": [
