--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,9 @@
     "angular-mocks": "~1.4.0"
   },
   "resolutions": {
-    "angular": "~1.4.4"
+    "firebase": "~2.3.2",
+    "angular": "~1.4.4",
+    "rsvp": "3.1.x"
   },
   "main": "src/app/fireStarter.factory.js",
   "ignore": [
@@ -27,6 +29,7 @@
     "coverage",
     "node_modules",
     "bower_components",
+    "gulp",
     "src/test",
     "src/testutils"
   ],
