--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
   ],
   "dependencies": {
     "angular": "~1.4.4",
-    "angularfire": "~1.1.2",
-    "firebase": "~2.2.9",
+    "angularfire": "~1.1.3",
+    "firebase": "~2.3.2",
     "geofire": "~3.2.3"
   },
   "ignore": [
     "coverage",
     "node_modules",
     "bower_components",
+		"gulp",
     "src/test",
     "src/testutils"
   ],
