--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,7 @@
     "angular": "~1.4.4",
     "rsvp": "3.1.x"
   },
-  "main": "src/app/fireStarter.factory.js",
+  "main": "dist/scripts/fireStarter.factory.js",
   "ignore": [
     "**/.*",
     "coverage",
