--- a/package.json
+++ b/package.json
@@ -22,14 +22,10 @@
     "coverage",
     "node_modules",
     "bower_components",
-    "gulp",
     "src/test",
     "src/testutils"
   ],
-  "main": "src/app/fireStarter.factory.js",
-  "files": [
-    "src/app/"
-  ],
+  "main": "dist/scripts/fireStarter.factory.js",
   "repository": {
     "type": "git",
     "url": "git://github.com/bpietravalle/fireStarter.git"
