--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "angular": "~1.4.4",
     "angularfire": "~1.1.3",
+    "coveralls": "^2.11.6",
     "firebase": "~2.3.2",
     "geofire": "~3.2.3"
   },
