--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "name": "Brian Pietravalle",
     "email": "bpietravalle@gmail.com"
   },
-  "version": "0.1.6-0",
+  "version": "0.1.6",
   "license": "MIT",
   "description": "experimental wrapper for angularfire and geofire",
   "keywords": [
